	which has been made into an integer (set to the value of 
	that the perl function time() outputs) 

*	Fixed bugs with the formkey and comment submission and story
	submission max posting limits

*	Moved redundant code from submit.pl and comments.pl that handled
	formkey functionality into Slash.pm

*	fixed admin.pl to now have URL field.

*	changed ratio on content filters 34 and 35 from .4 to .7/.5 (respectively).

slash-1.0.3, 2000.05.22
-----------------------

*	Fixed 404.pl and search.pl to strip HTML that may have been
	passed in through the URL; this had been identified as a way
	to redirect a user to a bad URL with a SCRIPT that would
	be executed once displayed in the browser (drwiii, eithkay)

*	Changed $admin mail in 404.pl to $I{adminmail}

*	Fixed longstanding bug in admin.pl preventing logging in
	after a logout without doing a GET reload of admin.pl
	(toast@ruka.org)

*	Changed autoUrl() in admin.pl back to previous state

*	Fixed bad sqlInsert call in admin.pl's blockSave()

*	Minor HTML tweaks to admin.pl, article.pl

*	Changed "commentkey" table to "formkeys", so it can be
	used for other form keys, like the submission forms,
	in comments.pl (see INSTALL for directions on upgrading)

*	In comments.pl's undoModeration(), don't let the score
	go above 5 or lower than -1

*	Added stats_reports hashref to slashdotrc.pl and dailyStuff;
	contains mail addresses for daily stats reports to go to

*	Changed test for last meta-moderation in metamod.pl's
	isEligible(); previous test would say user had recently
	meta-moderated if they never had

*	Log errors getting RDFs in portald (cday)

*	Changed test for fetching RDFs in portald to attempt
	if "rdf" column is not empty, instead of not null

*	Added call to execute a "portald-site" program; sites can put
	any extra code they might want to add to portald into this
	extra file (for example, in order to set blocks that are not
	RDF files, using other parsing schemes, etc.)
